--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
                             </svg>
                             <button class="btn-inline">Albufeira, Portugal</button>
 
+                            </div>
+
                             <div class="overview__rating">
                                 <div class="overview__rating-average">8.6</div>
                                 <div class="overview__rating-count">429 votes</div>
-                            </div>
 
                         </div>
                     </div>
@@ -190,9 +191,46 @@
                         </div>
                         
                         <div class="user-reviews">
-                            us
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi, totam, itaque officia ex.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="user 1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">
+                                            Nick Smith
+                                        </p>
+                                        <p class="review__user-date">Feb 23rd, 2020</p>
+                                    </div>
+
+                                    <div class="review__rating">8.2</div>
+                                </figcaption>
+                            </figure>
+
+                            <figure class="review">
+                                <blockquote class="review__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="user 1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">
+                                            Mary Thomas
+                                        </p>
+                                        <p class="review__user-date">Mar 28rd, 2020</p>
+                                    </div>
+
+                                    <div class="review__rating">9.1</div>
+                                </figcaption>
+                            </figure>
+
+                            <button class="btn-inline">Show all <span>&rarr;</span>
+                            </button>
                         </div>
+
                     </div>
+
                 </main>    
             </div>
         </div>
