completed cta, media queries and last fixes. Finished project

--- a/index.html
+++ b/index.html
@@ -229,6 +229,17 @@
                             </button>
                         </div>
 
+
+                    </div>
+
+                    <div class="cta">
+                        <div class="cta__book-now">
+                            Good news! We have 4 free rooms for youy selected dates!
+                        </div>
+                        <button class="btn">
+                            <span class="btn__visible">Book now</span>
+                            <span class="btn__invisible">Only 4 rooms left</span>
+                        </button>
                     </div>
 
                 </main>    
